# rust-elasticsearch

./: Cargo.toml  dockerfile  readme.md  start.sh
src/: main.rs
src/cluster/: indices.rs  mod.rs
