[package]
name = "rust-elasticsearch"
version = "0.1.0"
authors = ["David MacEachern <david.maceachern.tech@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.5.0", features = ["attributes", "unstable",]}
tide = "0.8.0"
dotenv = "0.15.0"
chrono = "0.4.11"
serde = { version = "1.0.106",  features = ["derive"] }
serde_json = "1.0.55"
uuid = "0.8.1"
thiserror = "1.0.16"
femme = "2.1.0"
kv-log-macro = "1.0.6"
elasticsearch = "7.7.1-alpha.1"
